tests/machine/x/ocaml/values_builtin.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/values_builtin.ml", line 22, characters 25-31:
22 |   print_endline (__show (values m));
                              ^^^^^^
Error: Unbound value values


Context (around line 22):
  20 | 
  21 | let () =
  22 |   print_endline (__show (values m));
  23 | 
